# JuicyPixels-dither-sa

./: JuicyPixels-dither-sa.cabal  README.md  demo.sh
demo/: Main.hs
src/Codec/Picture/: Grayscale.hs
src/Codec/Picture/Dither/: FS.hs  SA.hs
