cabal-version: 2.4
name:          JuicyPixels-dither-sa
version:       0.1
license:       BSD-3-Clause
license-file:  LICENSE
synopsis:      Dither images with a silly algorithm
category:      Graphics, Image
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
description:
  TBW
  Dither images with a silly algorithm

source-repository head
  type:     git
  location: https://github.com/phadej/JuicyPixels-dither-sa

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  build-depends:
    , base         ^>=4.12.0.0 || ^>=4.13.0.0
    , JuicyPixels
    , primitive
    , splitmix
    , vector

  exposed-modules:
    Codec.Picture.Dither.SA
    Codec.Picture.Dither.FS
    Codec.Picture.Grayscale

executable juicydither
  default-language: Haskell2010
  hs-source-dirs:   demo
  main-is:          Main.hs
  build-depends:
    , base
    , JuicyPixels
    , JuicyPixels-dither-sa
    , JuicyPixels-scale-dct
    , optparse-applicative
